--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
  
 .banner {
     background-image:
-    url(https://media.istockphoto.com/id/1082581320/photo/colorful-fruit-pattern-of-limes.jpg?s=612x612&w=0&k=20&c=2Be1Eg0lxjcCda5gy9JJrQ3bAT2y5xBeMoaANOO8eM8=)
-  }
+        url(./images/Gerald_G_Lime_variations_3.svg);
+}
 
   
