--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 
 body {
     background-color: var(--background);
+    font-family: 'Montserrat';
     /* background-repeat: no-repeat; */
     /* background-size: 1000px; */
     
@@ -35,7 +36,7 @@ body {
     margin-top: 40px;
     text-align: left;
     font-size: 20px;
-    font-family: "raleway";
+    font-family: "Montserrat";
     background-image: url(./images/Gerald_G_Lime_variations_3.svg);
     background-repeat: no-repeat;
     background-position: top;
