changed font to montserrat

--- a/savings.css
+++ b/savings.css
@@ -2,7 +2,7 @@ body {
     margin: auto;
     width: 640px; 
     padding: 30px;
-    font-family: 'Lexend Deca', sans-serif; 
+    font-family: 'Montserrat', sans-serif; 
     color: #2E475D;  
     background-image: url('lime2.jpeg');
   }
