--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
     text-align: center;
     /* line-height: 75px; */
     font-size: 20px;
-    font-family: "raleway";
+    font-family: "Montserrat";
     /* overflow: hidden; */
     /* box-shadow: #042940; */
     box-shadow:20px 20px 40px 10px rgb(179, 178, 178)
@@ -67,7 +67,7 @@ body {
     text-align: right;
     line-height: 75px;
     font-size: 20px;
-    font-family: "raleway";
+    font-family: "Montserrat";
     background-image: url(./images/Gerald_G_Lime_variations_3.svg);
     background-repeat: no-repeat;
     background-position: top;
