--- a/savings.css
+++ b/savings.css
@@ -3,7 +3,7 @@
 
 body {
     margin: auto;
-    width: 640px; 
+    /* width: 640px;  */
     padding: 30px;
     font-family: 'Montserrat';
     color: #2E475D;  
