--- a/styles.css
+++ b/styles.css
@@ -62,15 +62,17 @@ body {
     /* background-color: #f1f1f1; */
     width: 20%;
     margin-left: 40px;
-    margin-top: 40px;
-    text-align: right;
+    margin-top: 10px;
+    background-size: 100%;
+    object-fit: fill;
+    /* text-align: right;
     line-height: 75px;
     font-size: 20px;
-    font-family: "Montserrat";
-    background-image: url(./images/Gerald_G_Lime_variations_3.svg);
+    font-family: "Montserrat"; */
+    background-image: url(./images/saving-infographic-2.png.png);
     /* background-repeat: no-repeat; */
     background-position: top;
-    transform: scaleX(-1);
+
   }
 
   .flex-container .box-centre .display {
