--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
 body {
     background-color: var(--background);
     font-family: 'Montserrat';
+    /* margin: auto; */
     /* background-repeat: no-repeat; */
     /* background-size: 1000px; */
     
