--- a/signup.css
+++ b/signup.css
@@ -1,15 +1,14 @@
 *{
     box-sizing:border-box;
 }
-body
-{
-background-color: rgb(113, 184, 116);
-display: flex;
-justify-content: center;
-align-items: center;
-min-height: 100vh;
-margin: 0;
-}
+body {
+    margin: auto;
+    width: 640px; 
+    padding: 30px;
+    font-family: 'Lexend Deca', sans-serif; 
+    color: #2E475D;  
+    background-image: url('lime2.jpeg');
+  }
 .container
 {
     width: 400px;
