--- a/energy.css
+++ b/energy.css
@@ -1,19 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 body {
     margin: auto;
-    width: 1000px; 
+    /* width: 1000px;  */
     padding: 10px;
-    font-family: 'Lexend Deca', sans-serif; 
+    font-family: 'Montserrat';
     color: #40c53b; 
     background-image:"lime2.jpg";
     background-color:#d3e0d2 ; 
     
+  }
+
+  .container {
+    margin-left: 50px;
   }
   
   .heading h1 {
       font-size: 50px;
       font-weight: bolder;
     
-      font-family: "Montserrat", sans-serif;
+      font-family: "Montserrat";
       background-image: linear-gradient(to right, #dd1010 45%, #dd3907);
       color: transparent;
       background-clip: text;
@@ -22,7 +29,7 @@ body {
     .heading h2 {
       font-size: 50px;
       font-weight: bolder;
-      font-family: "Montserrat", sans-serif;
+      font-family: "Montserrat";
       background-image: linear-gradient(to right, #cc2121 45%, #e4510d);
       color: transparent;
       background-clip: text;
@@ -31,7 +38,7 @@ body {
     .heading h3 {
         font-size: 25px;
         font-weight: bolder;
-        font-family: "Montserrat", sans-serif;
+        font-family: "Montserrat";
         background-image: linear-gradient(to right, #cc2121 45%, #e4510d);
         color: transparent;
         background-clip: text;
@@ -41,7 +48,7 @@ body {
       font-weight: bolder;
       line-height: 200%;
       font: size 50px;
-      font-family: "Montserrat", sans-serif;
+      font-family: "Montserrat";
       color: red;
     }
     .form
@@ -84,3 +91,35 @@ button{
 {
     font-weight: bold; 
 }
+
+/* Nav bar */
+.topnav {
+    background-color: rgba(247, 242, 242, 0.083);
+    overflow: hidden;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+    z-index:1000;
+    }
+
+    .topnav a {
+    float: left;
+    color: #000000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    
+    }
+
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+    }
+
+
+.topnav a.split {
+    float: right;
+    background-color: #a4a4a4c9;
+    color: white;
+    font-weight: bold;
+    }
