--- a/signup.css
+++ b/signup.css
@@ -1,21 +1,27 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     box-sizing:border-box;
 }
-body
-{
-background-color: rgb(113, 184, 116);
-display: flex;
-justify-content: center;
-align-items: center;
-min-height: 100vh;
-margin: 0;
-}
+body {
+    margin: auto;
+    width: 640px; 
+    padding: 30px;
+    font-family: 'Montserrat';
+    color: #2E475D;  
+    background-image: url('lime2.jpeg');
+  }
 .container
 {
     width: 400px;
+    margin-left: 100px;
+    margin-top: 100px;
+    /* position: absolute; */
     background-color: beige;
     border-radius: 4px;
     overflow: hidden;
+    /* justify-content: center; */
 }
 .container_Home
 {
@@ -29,7 +35,7 @@ margin: 0;
     background-color: aliceblue;
     padding:20px 10px;
 }
-
+​
 .form
 {
 padding: 20px 40px;
