--- a/signup.css
+++ b/signup.css
@@ -5,9 +5,9 @@
     box-sizing:border-box;
 }
 body {
-    margin: auto;
-    width: 640px; 
-    padding: 30px;
+    /* margin: auto;
+    width: 640px;  */
+    /* padding: 10px; */
     font-family: 'Montserrat';
     color: #2E475D;  
     background-image: url('lime2.jpeg');
@@ -15,13 +15,15 @@ body {
 .container
 {
     width: 400px;
-    margin-left: 100px;
+    margin: auto;
+    /* margin-left: 100px;
+    margin-right: 100px; */
     margin-top: 100px;
     /* position: absolute; */
     background-color: beige;
     border-radius: 4px;
     overflow: hidden;
-    /* justify-content: center; */
+
 }
 .container_Home
 {
@@ -99,3 +101,35 @@ button{
 {
     font-weight: bold;  
 }
+
+/* Nav bar */
+.topnav {
+    background-color: rgba(247, 242, 242, 0.083);
+    overflow: hidden;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+    z-index:1000;
+    }
+
+    .topnav a {
+    float: left;
+    color: #000000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    
+    }
+
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+    }
+
+
+.topnav a.split {
+    float: right;
+    background-color: #a4a4a4c9;
+    color: white;
+    font-weight: bold;
+    }
