--- a/energy.css
+++ b/energy.css
@@ -6,9 +6,9 @@ body {
     /* width: 1000px;  */
     padding: 10px;
     font-family: 'Montserrat';
-    color: #40c53b; 
+    /* color: #40c53b;  */
     background-image:"lime2.jpg";
-    background-color:#d3e0d2 ; 
+    /* background-color:#d3e0d2 ;  */
     
   }
 
@@ -21,7 +21,7 @@ body {
       font-weight: bolder;
     
       font-family: "Montserrat";
-      background-image: linear-gradient(to right, #dd1010 45%, #dd3907);
+      background-image: linear-gradient(to right, black, 45%, #19dd07);
       color: transparent;
       background-clip: text;
       -webkit-background-clip: text;
@@ -30,7 +30,7 @@ body {
       font-size: 50px;
       font-weight: bolder;
       font-family: "Montserrat";
-      background-image: linear-gradient(to right, #cc2121 45%, #e4510d);
+      background-image: linear-gradient(to right, black, 45%, #19dd07);
       color: transparent;
       background-clip: text;
       -webkit-background-clip: text;
@@ -38,9 +38,10 @@ body {
     .heading h3 {
         font-size: 25px;
         font-weight: bolder;
+        color: black;
         font-family: "Montserrat";
-        background-image: linear-gradient(to right, #cc2121 45%, #e4510d);
-        color: transparent;
+        /* background-image: linear-gradient(to right, black, 45%, #19dd07); */
+        /* color: transparent; */
         background-clip: text;
         -webkit-background-clip: text;
       }
@@ -49,7 +50,7 @@ body {
       line-height: 200%;
       font: size 50px;
       font-family: "Montserrat";
-      color: red;
+      color: black;
     }
     .form
 {
@@ -63,7 +64,7 @@ padding: 20px 40px;
 .form-control label{
     display:inline-block;
     margin: bottom 5px;
-    color:#dd3907
+    color: black;
 }
 .form-control input
 {
