--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    background-color: var(--background);
+    /* background-color: var(--background); */
     font-family: 'Montserrat';
     /* margin: auto; */
     /* background-repeat: no-repeat; */
@@ -53,7 +53,7 @@ body {
     border-radius: 20px;
     text-align: center;
     /* line-height: 75px; */
-    font-size: 20px;
+    font-size: 15px;
     font-family: "Montserrat";
     /* overflow: hidden; */
     /* box-shadow: #042940; */
