--- a/signup.css
+++ b/signup.css
@@ -10,7 +10,7 @@ body {
     /* padding: 10px; */
     font-family: 'Montserrat';
     color: #2E475D;  
-    background-image: url('lime2.jpeg');
+    /* background-image: url('lime2.jpeg'); */
   }
 .container
 {
